--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -20,7 +20,8 @@
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
-.navigation ul li:hover {
+.navigation ul li:hover,
+.navigation ul li.hovered {
   background-color: var(--white);
 }
 .navigation ul li:nth-child(1) {
@@ -35,7 +36,8 @@
   text-decoration: none;
   color: var(--white);
 }
-.navigation ul li:hover a {
+.navigation ul li:hover a,
+.navigation ul li.hovered a {
   color: var(--blue);
 }
 .navigation ul li a .icon {
@@ -58,7 +60,8 @@
   text-align: start;
   white-space: nowrap;
 }
-.navigation ul li:hover a::before {
+.navigation ul li:hover a::before,
+.navigation ul li.hovered a::before {
   content: "";
   position: absolute;
   right: 0;
@@ -70,7 +73,8 @@
   box-shadow: 35px 35px 0 10px var(--white);
   pointer-events: none;
 }
-.navigation ul li:hover a::after {
+.navigation ul li:hover a::after,
+.navigation ul li.hovered a::after {
   content: "";
   position: absolute;
   right: 0;
